--- a/config/template.properties
+++ b/config/template.properties
@@ -171,19 +171,19 @@ gMaxIt                  = 500000 # sim time (generation=gMaxIt/gEvaluationTime)
                                # Eg. for 250 generations and 1000 sim tics/gen  
                                #  250000
 
-gNbOfLandmarks   = 4
-VisibleLandmarks = true
-gLandmarkRadius  = 10.0
-
-landmark[0].x = 50
-landmark[0].y = 50
-
-landmark[1].x = 350
-landmark[1].y = 50
-
-landmark[2].x = 84
-landmark[2].y = 306
-
-landmark[3].x = 312
-landmark[3].y = 309
+gNbOfLandmarks   = 0
+#VisibleLandmarks = true
+#gLandmarkRadius  = 10.0
+#
+#landmark[0].x = 50
+#landmark[0].y = 50
+#
+#landmark[1].x = 350
+#landmark[1].y = 50
+#
+#landmark[2].x = 84
+#landmark[2].y = 306
+#
+#landmark[3].x = 312
+#landmark[3].y = 309
 
