network examination code

--- a/src/contrib/neat/test/makefile
+++ b/src/contrib/neat/test/makefile
@@ -9,12 +9,12 @@ CC      = g++
 
 OBJ = ../gene.o ../genome.o ../link.o ../network.o ../organism.o ../species.o ../genomeAdapted.o ../innovation.o ../neat.o ../nnode.o ../population.o ../trait.o
 
-TARGET = neat-test
+TARGET = neat-test-network
 
 all=$(TARGET)
 
 %.o: %.cpp
 	$(CC) -o $@ -c $< $(CCFLAGS) $(INCLUDE)
 
-$(TARGET): $(OBJ) neat-test.o
+$(TARGET): $(OBJ) $(TARGET).o
 	$(CC) $(LDFLAGS) -o $@ $^
