added basket usage

--- a/config/template.properties
+++ b/config/template.properties
@@ -32,6 +32,7 @@ gBackgroundImageFilename   = data/env_400_background.png
 gGroundSensorImageFilename = data/env_400_background-nests-2.png
 gScreenWidth  = 400
 gScreenHeight = 400
+
 # robot images 
 gRobotMaskImageFilename  = data/minirobot-mask.png
 gRobotSpecsImageFilename = data/minirobot-specs-12sensors.png
@@ -163,11 +164,14 @@ gSensorRange            = 60
 gNbOfPhysicalObjects    = 50
 gInitialNumberOfRobots  = 100
 gFitnessFunction        = 2 # 0: locomotion, 1: collection, 2: forraging 
-gControllerType         = 0 # 0 = NEAT, 1 = FFNN
+gControllerType         = 1 # 0 = NEAT, 1 = FFNN
 gSelectionPressure      = 1.0 # 0 (random) -> 1.0 (best)
 gSigmaRef               = 0.5
+gBasketCapacity         = 10
+gPaintFloor             = false
+gPaintFloorIteration    = 100000
 gEvaluationTime         = 1000
-gMaxIt                  = 250000 # sim time (generation=gMaxIt/gEvaluationTime)
+gMaxIt                  = 200000 # sim time (generation=gMaxIt/gEvaluationTime)
                                # Eg. for 250 generations and 1000 sim tics/gen  
                                #  250000
 
