--- a/config/neatest.properties
+++ b/config/neatest.properties
@@ -167,12 +167,15 @@ gFitnessFunction        = 2 # 0: locomotion, 1: collection, 2: forraging
 gControllerType         = 1 # 0 = NEAT, 1 = FFNN
 gSelectionPressure      = 1.0 # 0 (random) -> 1.0 (best)
 gSigmaRef               = 0.5
+gBasketCapacity         = 10
+gPaintFloor             = false
+gPaintFloorIteration    = 100000
 gEvaluationTime         = 1000
-gMaxIt                  = 250000 # sim time (generation=gMaxIt/gEvaluationTime)
+gMaxIt                  = 200000 # sim time (generation=gMaxIt/gEvaluationTime)
                                # Eg. for 250 generations and 1000 sim tics/gen  
                                #  250000
 
-gNbOfLandmarks   = 3
+gNbOfLandmarks   = 0
 VisibleLandmarks = true
 gLandmarkRadius  = 10.0
 
