--- a/config/template.properties
+++ b/config/template.properties
@@ -145,7 +145,7 @@ gPhysicalObjectsRedraw  = true
 
 # 0:RoundObject, 1:EnergyItem 2:GateObject 3:SwitchObject
 gPhysicalObjectDefaultType = 1
-gPhysicalObjectDefaultRelocate = false
+gPhysicalObjectDefaultRelocate = true
 gPhysicalObjectDefaultOverwrite = false
 gPhysicalObjectDefaultRadius = 3
 gPhysicalObjectDefaultFootprintRadius = 7
@@ -159,7 +159,7 @@ gPhysicalObjectDefaultSoft_h = 9
 gPhysicalObjectDefaultRegrowTimeMax = 0
 
 
-
+gHidePicked             = true
 gSensorRange            = 60
 gNbOfPhysicalObjects    = 50
 gInitialNumberOfRobots  = 100
