update and bug correction of esMedea

--- a/config/esMedea-test.properties
+++ b/config/esMedea-test.properties
@@ -12,16 +12,16 @@
 gLogCommentText     = (under-development)
 gSnapshots          = false 
 gSnapshotsFrequency = 0 
-gVerbose            = false
+gVerbose            = true
 gLogDirectoryname   = logs
 #gLogFilename = logs/log.txt # if commented, create a time-stamped file.
-gExtendedVerbose        = true
+gExtendedVerbose        = false
 gControllersDirectory   = cont # if conmented no save
 
 
 # general purpose
 gDisplayMode          = true
-gBatchMode            = true
+gBatchMode            = false
 gPauseMode            = true
 gDisplaySensors       = 1 # 0: no, 1: only-contact, 2:all+contacts are red 3:all
 gDisplayTail          = false
